<resources>
    <string name="app_name">Assignment1</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCjTcoOiw3Am5MY3Xl-W005jwq4jWF9NUY
    </string>

    <string name="quiz_name_1">Quiz 1</string>
    <string name="subtext_1">A beginner typescript</string>

    <string name="quiz_name_2">Quiz 2</string>
    <string name="subtext_2">An intermediate typescript</string>

    <string name="quiz_name_3">Quiz 3</string>
    <string name="subtext_3">A beginner T3 stack</string>

    <string name="quiz_name_4">Quiz 4</string>
    <string name="subtext_4">A beginner in being a kid</string>

    <string name="quiz_name_5">Quiz 5</string>
    <string name="subtext_5">Idk man begin something</string>

    <string name="firebase_project_id">andeca2-b5af6</string>
    <string name="firebase_url">https://andeca2-b5af6-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <string name="firebase_app_id">1:590903525065:android:1b622cff39e82e8a631718</string>
    <string name="firebase_api_key">AIzaSyDmoAYjWVoJmz0JnSagYf_qMppU93I6bKc</string>

    <string name="prompt_info_title">Sample App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="already_signedin">already signed in</string>

    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="desc_biometrics_authorization">Enter your login ID and password to confirm activation of Biometric Login.</string>
    <string name="cancel">Cancel</string>
    <string name="btn_authorize">Authorize</string>

    <string name="user_info">Information</string>
    <string name="log_out"> Logout </string>
    <string name="save_btn">Save</string>
    <string name="personal">Personal</string>
    <string name="er_contact">Emergency Contact</string>
    <string name="pref">Preference</string>

    <string-array name="relationship_options">
        <item>Mother</item>
        <item>Father</item>
        <item>Guardian</item>
        <item>Sibling</item>
        <item>Relative</item>
        <item>Others</item>
    </string-array>

    <string-array name="announcement_options">
        <item>All</item>
        <item>Recommendation</item>
        <item>Reminder</item>
        <item>Accomplishment</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="result_message">Your total score is %1$d / %2$d (%3$d%%)</string>
</resources>
