<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7EB"
    tools:context=".SettingsPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="407dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/personal"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="Email: Christopher Fernandez Gan"
                            android:textSize="15dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="Email: bobby@gmail.com"
                            android:textSize="15dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="Class: 403"
                            android:textSize="15dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

<!--    ========================      APPEARANCE=========================================================-->

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:text="@string/pref"
                                android:textSize="18dp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    android:layout_weight="1"
                                    android:text="Dark Mode"
                                    android:textSize="14dp" />

                                <Switch
                                    android:id="@+id/switch1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    android:layout_weight="1" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    android:layout_weight="1"
                                    android:text="Font Size"
                                    android:textSize="14dp" />

                                <Spinner
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    android:layout_weight="1" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

<!--                ==============================================EMERGENCY CONTACT==============================================-->

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/er_contact"
                            android:textSize="18dp"

                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="Contact"
                                android:textSize="14dp" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="+65 8989 8989"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="Name"
                                android:textSize="14dp" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="Johnson Teal Gan"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:text="Relationship"
                                android:textSize="14dp" />

                            <Spinner
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1" />

                        </LinearLayout>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

<!--                =========================================LOGOUT AND SAVING=========================================-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/logout_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:color="@color/logoutColor"
                        android:onClick="onClickLogout"
                        android:text="@string/log_out" />

                    <Button
                        android:id="@+id/save_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_weight="1"
                        android:background="@color/orange"
                        android:color="@color/white"
                        android:text="@string/save_btn" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>